Set size of canvas to window when canvas_background option is set

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     <script type="text/javascript" src="build/glslEditor.js"></script>
     <script type="text/javascript">
     	window.glslEditor = new GlslEditor('#glsl_editor', {
-    		canvas_size: 500,
-            canvas_draggable: true,
-            canvas_resizable: true,
-    		theme: 'monokai',
-            watchHash: true,
-            fileDrops: true,
-    		menu: true
+        canvas_size: 500,
+        canvas_draggable: true,
+        canvas_resizable: true,
+        canvas_background: true,
+        theme: 'monokai',
+        watchHash: true,
+        fileDrops: true,
+        menu: true
     	});
         document.body.style.backgroundColor = window.getComputedStyle(glslEditor.editor.getWrapperElement(),null).getPropertyValue('background-color');
     </script>
